Added cloneable equals and hashcode to all parse tree nodes, still not totally sure about doing this. Also added new empty example