@@ -5,19 +5,23 @@ import org.junit.jupiter.api.Test;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class TestEnumCasesNode extends BaseTestNode {
 
     @Test
-    public void testCreate() {
+    public void testCreateMinimal() {
         new EnumCasesNode(
             BaseTestNode.fileName,
             BaseTestNode.line,
             BaseTestNode.charPosition,
             Collections.emptyList()
         );
+    }
+
+    @Test
+    public void testCreatePopulated() {
+        createPopulatedTestNode();
     }
 
     @Test
@@ -47,28 +51,51 @@ public class TestEnumCasesNode extends BaseTestNode {
 
     @Test
     public void testToString() {
-        var node = new EnumCasesNode(
-            BaseTestNode.fileName,
-            BaseTestNode.line,
-            BaseTestNode.charPosition,
-            Collections.emptyList()
-        );
+        var node = createPopulatedTestNode();
         var expectedToStringOutput = """
         //EnumCasesNode
             //Super -> //BaseParseTreeNode
                 SourceFileName : TestFileName.pg
                 Line : 1
                 CharPosition : 0
+            //EnumNameNode
+                //Super -> //BaseParseTreeNode
+                    SourceFileName : TestFileName.pg
+                    Line : 1
+                    CharPosition : 0
+                EnumName : EnumName
         """;
         assertEquals(expectedToStringOutput, node.toString(), "Unexpected toString output");
     }
 
-    public static EnumCasesNode createTestNode() {
+    @Test
+    public void testEquals() {
+        var node1 = createPopulatedTestNode();
+        var node2 = createPopulatedTestNode();
+        assertEquals(node1, node2, "Expected objects to be equal");
+    }
+
+    @Test
+    public void testHashcode() {
+        var node1Hashcode = createPopulatedTestNode().hashCode();
+        var node2Hashcode = createPopulatedTestNode().hashCode();
+        assertEquals(node1Hashcode, node2Hashcode, "Expected objects to be equal");
+    }
+
+    @Test
+    public void testClone() {
+        var node1 = createPopulatedTestNode();
+        var node2 = node1.clone();
+        assertEquals(node1, node2, "Expected cloned objects to be equal");
+        assertEquals(node1.hashCode(), node2.hashCode(), "Expected cloned objects hashcode to be equal");
+    }
+
+    public static EnumCasesNode createPopulatedTestNode() {
         return new EnumCasesNode(
             BaseTestNode.fileName,
             BaseTestNode.line,
             BaseTestNode.charPosition,
-            Collections.emptyList()
+            List.of(TestEnumNameNode.createPopulatedTestNode())
         );
     }
 
