@@ -5,19 +5,24 @@ import org.junit.jupiter.api.Test;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class TestEnumVersionsNode extends BaseTestNode {
 
     @Test
-    public void testCreate() {
+    public void testCreateMinimal() {
         new EnumVersionsNode(
             BaseTestNode.fileName,
             BaseTestNode.line,
             BaseTestNode.charPosition,
             Collections.emptyList()
         );
+    }
+
+    @Test
+    public void testCreatePopulated() {
+        createPopulatedTestNode();
     }
 
     @Test
@@ -48,28 +53,67 @@ public class TestEnumVersionsNode extends BaseTestNode {
 
     @Test
     public void testToString() {
-        var node = new EnumVersionsNode(
-            BaseTestNode.fileName,
-            BaseTestNode.line,
-            BaseTestNode.charPosition,
-            Collections.emptyList()
-        );
+        var node = createPopulatedTestNode();
         var expectedToStringOutput = """
         //EnumVersionsNode
             //Super -> //BaseParseTreeNode
                 SourceFileName : TestFileName.pg
                 Line : 1
                 CharPosition : 0
+            //EnumVersionNode
+                //Super -> //BaseParseTreeNode
+                    SourceFileName : TestFileName.pg
+                    Line : 1
+                    CharPosition : 0
+                //VersionNumberNode
+                    //Super -> //BaseParseTreeNode
+                        SourceFileName : TestFileName.pg
+                        Line : 1
+                        CharPosition : 0
+                    VersionNumber : 1
+                //EnumCasesNode
+                    //Super -> //BaseParseTreeNode
+                        SourceFileName : TestFileName.pg
+                        Line : 1
+                        CharPosition : 0
+                    //EnumNameNode
+                        //Super -> //BaseParseTreeNode
+                            SourceFileName : TestFileName.pg
+                            Line : 1
+                            CharPosition : 0
+                        EnumName : EnumName
         """;
         assertEquals(expectedToStringOutput, node.toString(), "Unexpected toString output");
     }
 
-    public static EnumVersionsNode createTestNode() {
+    @Test
+    public void testEquals() {
+        var node1 = createPopulatedTestNode();
+        var node2 = createPopulatedTestNode();
+        assertEquals(node1, node2, "Expected objects to be equal");
+    }
+
+    @Test
+    public void testHashcode() {
+        var node1Hashcode = createPopulatedTestNode().hashCode();
+        var node2Hashcode = createPopulatedTestNode().hashCode();
+        assertEquals(node1Hashcode, node2Hashcode, "Expected objects to be equal");
+    }
+
+    @Test
+    public void testClone() {
+        var node1 = createPopulatedTestNode();
+        var node2 = node1.clone();
+        assertEquals(node1, node2, "Expected cloned objects to be equal");
+        assertEquals(node1.hashCode(), node2.hashCode(), "Expected cloned objects hashcode to be equal");
+    }
+
+    public static EnumVersionsNode createPopulatedTestNode() {
         return new EnumVersionsNode(
             BaseTestNode.fileName,
             BaseTestNode.line,
             BaseTestNode.charPosition,
-            Collections.emptyList()
+            List.of(TestEnumVersionNode.createPopulatedTestNode())
         );
     }
 
